sfdx-source/core/main/schema/objects/TestDataSupplementer__mdt/fields/BindingSObjectAlternate__c.field-meta.xml
<CustomField>
    <fullName>BindingSObjectAlternate__c</fullName>
    <description>Use this field to specify the SObject API name to bind to when the &quot;Binding SObject&quot; field does not list that particular SObject.  Only specify the &quot;Binding SObject&quot; field or this one; not both.</description>
    <inlineHelpText>Use this field to specify the SObject API name to bind to when the &quot;Binding SObject&quot; field does not list that particular SObject.  Only specify the &quot;Binding SObject&quot; field or this one; not both.</inlineHelpText>
    <label>Binding SObject Alternate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>