sfdx-source/core/main/schema/objects/TestDataSupplementer__mdt/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>A value used to ascendingly sort the supplementers to accommodate dependencies.</description>
    <inlineHelpText>A value used to ascendingly sort the supplementers to accommodate dependencies.</inlineHelpText>
    <label>Sequence</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>