sfdx-source/core/main/schema/objects/TestDataSupplementer__mdt/validationRules/BindObj_Or_BindObjAlt.validationRule-meta.xml
<ValidationRule>
    <fullName>BindObj_Or_BindObjAlt</fullName>
    <active>true</active>
    <description>This validation rule ensures that only the &quot;Binding SObject&quot; or the &quot;Binding SObject Alternate&quot; field is specified and not both.</description>
    <errorConditionFormula>NOT( ISBLANK( BindingSObject__c ) ) &amp;&amp; NOT( ISBLANK( BindingSObjectAlternate__c ) )</errorConditionFormula>
    <errorMessage>Only specify the &quot;Binding SObject&quot; field or the &quot;Binding SObject Alternate&quot; field; not both.</errorMessage>
</ValidationRule>